{
    "version": 1,
    "name": "VRSTGInputActions",
    "maps": [
        {
            "name": "Test",
            "id": "31f60bd9-0dc0-4b89-b539-ecabbef97ad3",
            "actions": [
                {
                    "name": "A",
                    "type": "Button",
                    "id": "1054df8c-bd95-445d-a14d-809d5314925c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "B",
                    "type": "Button",
                    "id": "f0130f34-6bfc-41f8-a962-c6d958fec4ac",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "X",
                    "type": "Button",
                    "id": "6d83e8ea-72c0-48ac-bee5-2085dca3496c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Y",
                    "type": "Button",
                    "id": "a38b787c-e690-40e4-a772-b90d2dc34d71",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbL",
                    "type": "Button",
                    "id": "882f5662-9475-4288-8192-f1cdc4612ecc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbR",
                    "type": "Button",
                    "id": "7d9c9ed2-ca2e-4aff-a9c0-316de06f94fc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Menu",
                    "type": "Button",
                    "id": "b35a5470-1ed5-49dc-8ad2-5c4940cec425",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerButtonL",
                    "type": "Button",
                    "id": "697fe992-b0f4-4494-b97e-c07c55d262b8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerButtonR",
                    "type": "Button",
                    "id": "f4fe7692-5ddc-4a8e-b8db-e11c8011670a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripButtonL",
                    "type": "Button",
                    "id": "9554538c-7e49-4199-9426-c651253fff6d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripButtonR",
                    "type": "Button",
                    "id": "c3528513-94a5-4407-8ec6-997b3c82695b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerL",
                    "type": "Value",
                    "id": "516e2b39-54e1-46a6-b049-930fc00ea8df",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerR",
                    "type": "Value",
                    "id": "5336eac6-b8ad-44df-9d0a-7045627c6569",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripL",
                    "type": "Value",
                    "id": "fa8cca20-be22-44c3-8959-16b301f6ccc0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripR",
                    "type": "Value",
                    "id": "3b3a40d7-3d12-4b58-9133-0538d3bbae44",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StickL",
                    "type": "Value",
                    "id": "819b75ad-1cb6-4736-9d7b-6cd7dbd0dcd6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StickR",
                    "type": "Value",
                    "id": "bce598b9-19d7-43fb-b8fa-a905ca880284",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4ff5b1f7-ccd6-47f7-9a55-e3b6ca10b644",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "A",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a7b87c3-6369-4917-a495-53972ec8011e",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "B",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef67573b-6801-4a26-8eb5-4d0164d6d023",
                    "path": "<XRController>{LeftHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "X",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ab7c599-5ff6-4dae-a9ce-59d2910f7ac6",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Y",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4af70b67-bf87-48a4-a7fe-cfd59c3d8b20",
                    "path": "<XRController>{LeftHand}/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f15d64f-8aa2-4823-af37-403eec219b41",
                    "path": "<XRController>{RightHand}/{Primary2DAxisClick}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c130d3e-9940-4c07-a0bb-ab710472d0e5",
                    "path": "<XRController>{LeftHand}/{MenuButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a467546-5152-4d26-bbaf-b52e7456ac50",
                    "path": "<XRController>{LeftHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cd9ae5f-0a1c-4263-bfaa-647fbcf3dc05",
                    "path": "<XRController>{RightHand}/{TriggerButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "055dd716-8440-43f1-8e03-275f8ece1c71",
                    "path": "<XRController>{LeftHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripButtonL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a04e48e-6fb0-4d19-85e5-a36b14622f3e",
                    "path": "<XRController>{RightHand}/{GripButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripButtonR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5aea8b8-a63e-467e-a896-c524afeaf03e",
                    "path": "<XRController>{LeftHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e63f909-ddd7-43dc-b6e2-bbc2b4f691be",
                    "path": "<XRController>{RightHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33b92f0a-cc74-402e-8a9d-0ee5f53b30b6",
                    "path": "<XRController>{LeftHand}/{Grip}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ba3234f-391c-49ce-abe4-4879edb29506",
                    "path": "<XRController>{RightHand}/{Grip}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e633e16-e0be-4d84-9030-70122e7f8503",
                    "path": "<XRController>{LeftHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d32c2f99-5edb-4174-9c3f-bd5fdfc77696",
                    "path": "<XRController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StickR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GrabL",
            "id": "e787a4e9-d4b9-4465-b2dd-b4d564a23d3b",
            "actions": [
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "b28f83b7-fc64-4286-9201-8111ec24dce1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "811f5f1c-b81a-47d3-a412-1618b0846847",
                    "path": "<XRController>{LeftHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GrabR",
            "id": "5bb81236-3f2c-42d3-8191-87a684b54cc0",
            "actions": [
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "dec51600-0dba-4d51-bfd8-f3731ff60455",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6e48291-2165-41c4-83ca-7d0475e6970f",
                    "path": "<XRController>{RightHand}/{SecondaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}